feat: Реализована автоматизация бэкапов и улучшен UX

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   uuid: ^4.5.1
   wave: ^0.2.2
+  app_links: ^6.4.1
 
 dev_dependencies:
   flutter_test:
